kubernetes/apps/network/envoy-gateway/app/envoy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-cloudflare
  labels:
    type: cloudflare-dns
  annotations:
    external-dns.kubernetes.io/target: &hostname cloudflare.hyde.services
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: cloudflare
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 2403:5817:b73a:42::140 # exposed over IPv6 as the external gateway is using my 1 and only IPv4 address
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hydaz-com-tls
          - kind: Secret
            name: hyde-services-tls
          - kind: Secret
            name: ${D_HCA//./-}-tls
          - kind: Secret
            name: imagegenius-io-tls
          - kind: Secret
            name: ${D_SN//./-}-tls
          - kind: Secret
            name: ${D_TACA//./-}-tls
          - kind: Secret
            name: ${D_TAN//./-}-tls
          - kind: Secret
            name: ${D_LMVCA//./-}-tls
          - kind: Secret
            name: ${D_BBPC//./-}-tls
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  labels:
    type: cloudflare-dns
  annotations:
    external-dns.kubernetes.io/target: &hostname external.hyde.services
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.130
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hydaz-com-tls
          - kind: Secret
            name: hyde-services-tls
          - kind: Secret
            name: ${D_HCA//./-}-tls
          - kind: Secret
            name: imagegenius-io-tls
          - kind: Secret
            name: ${D_SN//./-}-tls
          - kind: Secret
            name: ${D_TACA//./-}-tls
          - kind: Secret
            name: ${D_TAN//./-}-tls
          - kind: Secret
            name: ${D_LMVCA//./-}-tls
          - kind: Secret
            name: ${D_BBPC//./-}-tls
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.hyde.services
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.120
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: hydaz-com-tls
          - kind: Secret
            name: hyde-services-tls
          - kind: Secret
            name: ${D_HCA//./-}-tls
          - kind: Secret
            name: imagegenius-io-tls
          - kind: Secret
            name: ${D_SN//./-}-tls
          - kind: Secret
            name: ${D_TACA//./-}-tls
          - kind: Secret
            name: ${D_TAN//./-}-tls
          - kind: Secret
            name: ${D_LMVCA//./-}-tls
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  timeout:
    http:
      connectionIdleTimeout: 4s
      requestTimeout: 0s
      streamIdleTimeout: 1h
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: crowdsec-envoy-bouncer
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-cloudflare
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: crowdsec-envoy-bouncer
          namespace: security
          port: 8080
