kubernetes/apps/network/envoy-gateway/app/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-external
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.${D_HS}
spec:
  gatewayClassName: envoy-external
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.130
  listeners:
    - &http
      # ===== HS =====
      name: http-hs-apex
      protocol: HTTP
      port: 80
      hostname: &hs_apex "${D_HS}"
      allowedRoutes:
        namespaces:
          from: Same
    - <<: *http
      name: http-hs
      hostname: &hs "*.${D_HS}"
    - &https
      name: https-hs-apex
      protocol: HTTPS
      port: 443
      hostname: *hs_apex
      allowedRoutes:
        namespaces:
          from: All
      tls: &tls_hs
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-tls
    - <<: *https
      name: https-hs
      hostname: *hs
      tls: *tls_hs
    # ===== HCA =====
    - <<: *http
      name: http-hca-apex
      hostname: &hca_apex "${D_HCA}"
    - <<: *http
      name: http-hca
      hostname: &hca "*.${D_HCA}"
    - <<: *https
      name: https-hca-apex
      hostname: *hca_apex
      tls: &tls_hca
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-tls
    - <<: *https
      name: https-hca
      hostname: *hca
      tls: *tls_hca
    # ===== imagegenius.io =====
    - <<: *http
      name: http-igi-apex
      hostname: &igi_apex "imagegenius.io"
    - <<: *http
      name: http-igi
      hostname: &igi "*.imagegenius.io"
    - <<: *https
      name: https-igi-apex
      hostname: *igi_apex
      tls: &tls_igi
        certificateRefs:
          - kind: Secret
            name: imagegenius-io-tls
    - <<: *https
      name: https-igi
      hostname: *igi
      tls: *tls_igi
    # ===== LMVCA =====
    - <<: *http
      name: http-lmvca-apex
      hostname: &lmvca_apex "${D_LMVCA}"
    - <<: *http
      name: http-lmvca
      hostname: &lmvca "*.${D_LMVCA}"
    - <<: *https
      name: https-lmvca-apex
      hostname: *lmvca_apex
      tls: &tls_lmvca
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-tls
    - <<: *https
      name: https-lmvca
      hostname: *lmvca
      tls: *tls_lmvca
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-external
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
  compression:
    - type: Brotli
    - type: Gzip
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http-hs-apex
    - name: envoy-external
      namespace: network
      sectionName: http-hs
    - name: envoy-external
      namespace: network
      sectionName: http-hca-apex
    - name: envoy-external
      namespace: network
      sectionName: http-hca
    - name: envoy-external
      namespace: network
      sectionName: http-igi-apex
    - name: envoy-external
      namespace: network
      sectionName: http-igi
    - name: envoy-external
      namespace: network
      sectionName: http-lmvca-apex
    - name: envoy-external
      namespace: network
      sectionName: http-lmvca
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
