kubernetes/apps/network/envoy-gateway/app/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-internal
    namespace: network
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${D_HS}
spec:
  gatewayClassName: envoy-internal
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.120
  listeners:
    - &http
      # ===== HS =====
      name: http-hs-apex
      protocol: HTTP
      port: 80
      # yamllint disable-line rule:line-length
      hostname: &hs_apex "${D_HS}" # Template variable, substituted by Flux
      allowedRoutes:
        namespaces:
          from: Same
    - <<: *http
      name: http-hs
      hostname: &hs "*.${D_HS}"
    - &https
      name: https-hs-apex
      protocol: HTTPS
      port: 443
      hostname: *hs_apex
      allowedRoutes:
        namespaces:
          from: All
      tls: &tls_hs
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-tls
    - <<: *https
      name: https-hs
      hostname: *hs
      tls: *tls_hs
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-internal
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
  compression:
    - type: Brotli
    - type: Gzip
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
